--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,14 @@
             <artifactId>json-schema-validator</artifactId>
             <version>5.4.0</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>5.1.2</version>
+        </dependency>
+
     </dependencies>
 
 
